--- a/src/Sedio/Sedio.csproj
+++ b/src/Sedio/Sedio.csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Framework\Configuration\" />
     <Folder Include="Logic\Api\Dns\" />
+    <Folder Include="Logic\Api\Validation\" />
     <Folder Include="Logic\Model\" />
-    <Folder Include="Logic\Persistence\Memory\" />
-    <Folder Include="Logic\Persistence\Disk\" />
+    <Folder Include="Configuration\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -20,6 +21,8 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="7.5.2" />
+    <PackageReference Include="Hyperion" Version="0.9.8" />
+    <PackageReference Include="LiteDB" Version="4.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0-rc1-final" />
     <PackageReference Include="NSwag.AspNetCore" Version="11.17.9" />
