Refactored projects, switched to C# 7.3

--- a/src/Sedio.Server.Tests/Sedio.Server.Tests.csproj
+++ b/src/Sedio.Server.Tests/Sedio.Server.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sedio.Contracts\Sedio.Contracts.csproj" />
+    <ProjectReference Include="..\Sedio.Server\Sedio.Server.csproj" />
   </ItemGroup>
 
 </Project>
