More cleanup and fixes.

--- a/src/Sedio.Server/Sedio.Server.csproj
+++ b/src/Sedio.Server/Sedio.Server.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Dns\" />
+    <Folder Include="Execution\" />
   </ItemGroup>
 
 </Project>
