--- a/src/server/Sedio.Server/Sedio.Server.csproj
+++ b/src/server/Sedio.Server/Sedio.Server.csproj
@@ -1,26 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
+    <LangVersion>7.2</LangVersion>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>f60fd89d-88e2-4b2e-8f3c-536e7c121ee0</UserSecretsId>
     <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Sedio.Contracts\Sedio.Contracts.csproj" />
-    <ProjectReference Include="..\Sedio.Core\Sedio.Core.csproj" />
-    <ProjectReference Include="..\Sedio.Server\Sedio.Server.csproj" />
+    <ProjectReference Include="..\..\common\Sedio.Contracts\Sedio.Contracts.csproj" />
+    <ProjectReference Include="..\..\framework\Sedio.Core\Sedio.Core.csproj" />
+    <ProjectReference Include="..\..\framework\Sedio.Core.Runtime\Sedio.Core.Runtime.csproj"/>
+    <ProjectReference Include="..\Sedio.Server.Runtime\Sedio.Server.Runtime.csproj" />
   </ItemGroup>
-
 </Project>
