--- a/src/agent/Sedio.Agent/Sedio.Agent.csproj
+++ b/src/agent/Sedio.Agent/Sedio.Agent.csproj
@@ -3,6 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.2</LangVersion>
+    <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sedio.Agent.Runtime\Sedio.Agent.Runtime.csproj"/>
