--- a/src/agent/Sedio.Agent/Sedio.Agent.csproj
+++ b/src/agent/Sedio.Agent/Sedio.Agent.csproj
@@ -3,10 +3,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.2</LangVersion>
+    <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sedio.Agent.Runtime\Sedio.Agent.Runtime.csproj"/>
+    <ProjectReference Include="..\Sedio.Agent.Runtime\Sedio.Agent.Runtime.csproj" />
     <ProjectReference Include="..\..\client\Sedio.Client\Sedio.Client.csproj" />
     <ProjectReference Include="..\..\common\Sedio.Contracts\Sedio.Contracts.csproj" />
     <ProjectReference Include="..\..\framework\Sedio.Core.Runtime\Sedio.Core.Runtime.csproj" />
