--- a/src/framework/Sedio.Core/Sedio.Core.csproj
+++ b/src/framework/Sedio.Core/Sedio.Core.csproj
@@ -6,4 +6,8 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Functional" />
+    <Folder Include="Patterns" />
+  </ItemGroup>
 </Project>
