--- a/src/server/Sedio.Server/Sedio.Server.csproj
+++ b/src/server/Sedio.Server/Sedio.Server.csproj
@@ -3,17 +3,16 @@
     <LangVersion>7.2</LangVersion>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>f60fd89d-88e2-4b2e-8f3c-536e7c121ee0</UserSecretsId>
+    <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\common\Sedio.Contracts\Sedio.Contracts.csproj" />
     <ProjectReference Include="..\..\framework\Sedio.Core\Sedio.Core.csproj" />
-    <ProjectReference Include="..\..\framework\Sedio.Core.Runtime\Sedio.Core.Runtime.csproj"/>
+    <ProjectReference Include="..\..\framework\Sedio.Core.Runtime\Sedio.Core.Runtime.csproj" />
     <ProjectReference Include="..\Sedio.Server.Runtime\Sedio.Server.Runtime.csproj" />
   </ItemGroup>
 </Project>
