--- a/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
+++ b/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.0-rc1-final" />
+    <PackageReference Include="NSwag.AspNetCore" Version="11.17.11" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Configuration" />
