--- a/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
+++ b/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
@@ -23,4 +23,7 @@
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dns" />
+  </ItemGroup>
 </Project>
