--- a/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
+++ b/src/framework/Sedio.Core.Runtime/Sedio.Core.Runtime.csproj
@@ -11,12 +11,12 @@
     <PackageReference Include="App.Metrics" Version="2.1.0" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
-    <PackageReference Include="FluentValidation" Version="7.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0" />
-    <PackageReference Include="NSwag.AspNetCore" Version="11.17.12" />
+    <PackageReference Include="FluentValidation" Version="7.6.103" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1"/> 
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.1" />
+    <PackageReference Include="NSwag.AspNetCore" Version="11.17.19" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
