--- a/src/server/Sedio.Server.Runtime/Sedio.Server.Runtime.csproj
+++ b/src/server/Sedio.Server.Runtime/Sedio.Server.Runtime.csproj
@@ -10,9 +10,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Api\Internal\Handlers" />
+    <Folder Include="Api\Internal\Handlers\ServicesVersions" />
     <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="7.6.101" />
+    <PackageReference Include="FluentValidation" Version="7.6.103" />
   </ItemGroup>
 </Project>
