--- a/src/agent/Sedio.Agent/Sedio.Agent.csproj
+++ b/src/agent/Sedio.Agent/Sedio.Agent.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.2</LangVersion>
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
+    <RuntimeVersion>2.1.1</RuntimeVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sedio.Agent.Runtime\Sedio.Agent.Runtime.csproj" />
